Code validatet and other minor changes

--- a/faq.html
+++ b/faq.html
@@ -25,7 +25,7 @@
       </div>
       <div class="navContainer">
         <ul class="navbar">
-            <li><i class="fa fa-solid fa-house"></i><a href="index.html">Hjem</a></li>
+            <li><i class="fa fa-solid fa-house"></i><a href="landingpage.html">Hjem</a></li>
             <li><i class="fa fa-solid fa-table-cells-large"></i><a href="overblik.html">Overblik</a></li>
             <li><i class="fa fa-solid fa-gear"></i><a href="#">Indstillinger</a></li>
             <li><i class="fa fa-regular fa-circle-question"></i><a href="faq.html">Hjælp</a></li>
@@ -51,34 +51,33 @@
     <div class='faq'>
       <input id='faq-a' type='checkbox' class="read-more">
       <label for='faq-a'>
-        <p class="faq-heading">Hvordan ændre jeg mit medlemsskab?</p>
-        <p class="faq-text">Under min konto vælger du din plan, hvorefter du kan ændre den om nødvendigt. Dog er der en opsigelsesperiode på 1 måned på Sølv og Guld planen.</p>
+        <span class="faq-heading">Hvordan ændre jeg mit medlemsskab?</span>
+        <span class="faq-text">Under min konto vælger du din plan, hvorefter du kan ændre den om nødvendigt. Dog er der en opsigelsesperiode på 1 måned på Sølv og Guld planen.</span>
       </label>
       <input id='faq-b' type='checkbox'>
       <label for='faq-b'>
-        <p class="faq-heading">Hvad koster det at være medlem?</p>
-        <p class="faq-text">Det er gratis at være medlem, men ønsker du at have flere fordele end hvad Bronze planen inkludere, skal du blot være Sølv eller Guld planen. Du kan læse mere om dette <a href="#planer">her.</a></p>
+        <span class="faq-heading">Hvad koster det at være medlem?</span>
+        <span class="faq-text">Det er gratis at være medlem, men ønsker du at have flere fordele end hvad Bronze planen inkludere, skal du blot være Sølv eller Guld planen. Du kan læse mere om dette <a class="greenLink" href="#planer">her.</a></span>
       </label>
       <input id='faq-c' type='checkbox'>
       <label for='faq-c'>
-        <p class="faq-heading">Hvilke fordele er der ved klubben?</p>
-        <p class="faq-text">Der er massere af fordele ved at være medlem af Brillebaren Plus, herunder optjening af points og indløs disse til
-dine ønsket rabatter, belønninger invitation til eksklusive events og meget mere!</p>
+        <span class="faq-heading">Hvilke fordele er der ved klubben?</span>
+        <span class="faq-text">Der er massere af fordele ved at være medlem af Brillebaren Plus, herunder optjening af points og indløs disse til dine ønsket rabatter, belønninger invitation til eksklusive events og meget mere!</span>
       </label>
       <input id='faq-d' type='checkbox'>
       <label for='faq-d'>
-        <p class="faq-heading">Hvad er bindingsperioden?</p>
-        <p class="faq-text">Bindingsperioden på Sølv og Guld planen er på 3 måneder. Ønsker du at ændre din plan efterfølgende kan du gøre det igennem <a href="#minkonto">Min konto</a>hvor du kan vælge den plan, som passer bedst til dine behov.</p>
+        <span class="faq-heading">Hvad er bindingsperioden?</span>
+        <span class="faq-text">Bindingsperioden på Sølv og Guld planen er på 3 måneder. Ønsker du at ændre din plan efterfølgende kan du gøre det igennem <a class="greenLink" href="#minkonto">Min konto</a>hvor du kan vælge den plan, som passer bedst til dine behov.</span>
       </label>
       <input id='faq-e' type='checkbox'>
       <label for='faq-e'>
-        <p class="faq-heading">Hvordan opsiger jeg Sølv eller Guld planen?</p>
-        <p class="faq-text">Under <a href="#minkonto">Min Konto</a> kan du ændre din plan til Bronze planen, dog mister du dine ekslusive tilbud som Sølv eller Guld medlem.</p>
+        <span class="faq-heading">Hvordan opsiger jeg Sølv eller Guld planen?</span>
+        <span class="faq-text">Under <a class="greenLink" href="#minkonto">Min Konto</a> kan du ændre din plan til Bronze planen, dog mister du dine ekslusive tilbud som Sølv eller Guld medlem.</span>
       </label>
       <input id='faq-f' type='checkbox'>
       <label for='faq-f'>
-        <p class="faq-heading">Hvor mange points optjener man?</p>
-        <p class="faq-text">Som Bronze medlem optjener du 1 per krone du bruger i butikken. Dog som Sølv og Guld medlem optjener du dobbelt så mange points, så du hurtigere kan få belønningerne.</p>
+        <span class="faq-heading">Hvor mange points optjener man?</span>
+        <span class="faq-text">Som Bronze medlem optjener du 1 per krone du bruger i butikken. Dog som Sølv og Guld medlem optjener du dobbelt så mange points, så du hurtigere kan få belønningerne.</span>
       </label>
     </div>
     <div class="mereInfo">
