--- a/index.html
+++ b/index.html
@@ -14,21 +14,21 @@
 <body>
     <div class="background" id="landingBack">
         <img class="logo" src="img/logo.png" alt="logo">
-        <img class="maskot" src="img/Maskot til Brillebaren 1.png" alt="maskot">
+        <img class="maskot" src="img/maskot.png" alt="maskot">
     </div>
     <div class="whiteBackground">
     <div class="landingBox">
         <h4 class="boxText">Har du allerede en konto?</h4>
-        <button id="login" class="btn loginBtn">
-            <p class="btnText">Login</p>
-            <i class="fa-solid fa-arrow-right loginArrow"></i>
+        <button class="yellowBtn" id="login">
+                Log ind
+            <i class="fa-solid fa-arrow-right whiteArrow"></i>
         </button>
     </div>
     <div class="landingBox">
         <h4 class="boxText">Tilmeld dig BrilleBaren Plus</h4>
-        <button id="opret" class="btn loginBtn">
-            <p class="btnText">Opret konto</p>
-            <i class="fa-solid fa-arrow-right loginArrow"></i>
+        <button class="yellowBtn" id="opret">
+                Opret konto
+            <i class="fa-solid fa-arrow-right whiteArrow"></i>
         </button>
     </div>
     <p class="landingText">Som medlem af Brillebaren Plus får du eksklusive fordele i Brillebaren i Rosengårdcenteret (Odense)</p>
