--- a/landingpage.html
+++ b/landingpage.html
@@ -24,7 +24,7 @@
       </div>
       <div class="navContainer">
         <ul class="navbar">
-            <li><i class="fa fa-solid fa-house"></i><a href="index.html">Hjem</a></li>
+            <li><i class="fa fa-solid fa-house"></i><a href="landingpage.html">Hjem</a></li>
             <li><i class="fa fa-solid fa-table-cells-large"></i><a href="overblik.html">Overblik</a></li>
             <li><i class="fa fa-solid fa-gear"></i><a href="#">Indstillinger</a></li>
             <li><i class="fa fa-regular fa-circle-question"></i><a href="faq.html">Hjælp</a></li>
@@ -49,31 +49,30 @@
   <div class="whiteBackground">
     <div class="landingBox">
       <h2 class="boxText">Se dit medlemskort</h2>
-      <button class="btn btnIndex" id="medlemskort">
-          <p class="btnText">Medlemskort</p>
-          <i class="fa-solid fa-arrow-right loginArrow"></i>
+      <button class="yellowBtn" id="medlemskort">
+            Medlemskort
+          <i class="fa-solid fa-arrow-right whiteArrow"></i>
       </button>
     </div>
     <div class="landingBox">
       <h2 class="boxText">Se dine belønninger</h2>
-      <btn class="btn btnIndex" id="rewards">
-          <p class="btnText">Belønninger</p>
-          <i class="fa-solid fa-arrow-right loginArrow"></i>
-      </btn>
+      <button class="yellowBtn" id="rewards">
+            Belønninger
+          <i class="fa-solid fa-arrow-right whiteArrow"></i>
+      </button>
     </div>
+
   <h2 class="underOverskrift">Månedens udvalgte<br>belønninger:</h2>
+  
   <button onclick="openModal()" class="rewardBox1 colorful-div color1">
-    <div class="rewardP1">
-      <h3 class="rewardText1 activeText">Gratis Brillerens</h3>
-      <h3 class="boxText1 activeTextGreen">Klar til brug</h3>
-    </div>
-    
+     Gratis Brillerens
     <i class="fa-solid fa-circle-check"></i>
-</button>
+  </button>
+
   <div class="rewardBox color2">
     <div class="rewardGrid">
       <h3 class="boxText1">10% rabat på næste køb</h3>
-      <p class="boxText1">Mangler 200 point</p>
+      <p class="pointsTxt">Mangler 200 point</p>
     </div>
     <div class="rewardGrid2">
       <p class="procenter">50%</p>
@@ -83,7 +82,7 @@
   <div class="rewardBox color3">
     <div class="rewardGrid">
       <h3 class="boxText1">Gratis kop kaffe</h3>
-      <p class="boxText1">Mangler 200 point</p>
+      <p class="pointsTxt">Mangler 200 point</p>
     </div>
     <div class="rewardGrid2">
       <p class="procenter">50%</p>
@@ -93,40 +92,39 @@
 
   <div id="myModal" class="modal">
     <div class="modal-content">
-        <div class="card" id="card">
-            <div class="card-face card-front">
-              <button class="close-btn" onclick="closeModal()">
-                <i class="fa-solid fa-arrow-left"></i>
-              </button>
-                <div class="modal-icons">
-                    <i class="fa-solid fa-spray-can-sparkles"></i>
-                    <i class="fa-solid fa-glasses fa-rotate-by"></i>
-                </div>
-                <h2 class="modal-overskrift">Gratis brillerens</h2>
-                <p class="modalTxt">Udløber 01-07-2023</p>
-                <br>
-                <p class="modalTxt">En gratis spray brillerens, <br> som kan afhentes i Brillebaren</p>
-                <button class="greenBtn2" id="startAnimationButton" onclick="flipCard()">
-                    <p class="greenBtnTxt">Aktiver Belønning</p>
-                </button>
-            </div>
-            <div class="card-face card-back">
-              <button class="close-btn" onclick="closeModal()">
-                <i class="fa-solid fa-xmark"></i>
-              </button>
-                <img class="qrCode" src="img/qr-code.png" alt="qr-code">
-                <h2 class="modal-overskrift">Gratis brillerens</h2>
-                <p class="modalTxt">Udløber 01-07-2023</p>
-                <br>
-                <p class="modalTxt">En gratis spray brillerens, <br> som kan afhentes i Brillebaren</p>
-                    
-                <div class="rewardActivatet">
-                  <h2 class="activatetTxt">Aktiveret</h2>
-                  <i class="fChekmark fa-solid fa-check"></i>
-                </div>
-  
-            </div>
+      <div class="card" id="card">
+        <div class="card-face card-front">
+          <button class="close-btn" onclick="closeModal()">
+            <i class="fa-solid fa-arrow-left"></i>
+          </button>
+          <div class="modal-icons">
+            <i class="fa-solid fa-spray-can-sparkles"></i>
+            <i class="fa-solid fa-glasses fa-rotate-by"></i>
+          </div>
+          <h2 class="modal-overskrift">Gratis brillerens</h2>
+          <p class="modalTxt">Udløber 01-07-2023</p>
+          <br>
+          <p class="modalTxt">En gratis spray brillerens, <br> som kan afhentes i Brillebaren</p>
+          <button class="greenBtn" id="startAnimationButton" onclick="flipCard()">
+            Aktiver Belønning
+          </button>
         </div>
+        <div class="card-face card-back">
+          <button class="close-btn" onclick="closeModal()">
+            <i class="fa-solid fa-arrow-left"></i>
+          </button>
+          <img class="qrCode" src="img/qr-code.png" alt="qr-code">
+          <h2 class="modal-overskrift">Gratis brillerens</h2>
+          <p class="modalTxt">Udløber 01-07-2023</p>
+          <br>
+          <p class="modalTxt">En gratis spray brillerens, <br> som kan afhentes i Brillebaren</p>
+  
+          <div class="rewardActivatet">
+            <h2 class="activatetTxt">Aktiveret</h2>
+            <i class="fChekmark fa-solid fa-check"></i>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
   <footer></footer>
