--- a/login.html
+++ b/login.html
@@ -27,7 +27,7 @@
   <div class="whiteBackground">
     <div class="loginImg">
       <img class="loginLogo image" src="img/logo.png" alt="Logo">
-      <img class="loginMaskot image" src="img/Maskot til Brillebaren 1.png" alt="Maskot">
+      <img class="loginMaskot image" src="img/maskot.png" alt="Maskot">
     </div>
     <form class="loginForm">
       <label class="inputLabel">E-mail</label>
@@ -37,14 +37,14 @@
       <input type="password" class="form-control" name="password" placeholder="Skriv din adgangskode" required="">
       <a class="forgotPassword" href="#">Glemt dit password?</a><br>
       <p>Ingen konto endnu? <a class="loginCenterTxt" href="opret.html">Opret konto.</a></p>
-      <button class="btn greenLoginBtn greenBtn" type="submit" onclick="login()">
-        <p class="activeTextGreen greenBtnTxt">Log ind</p>
+      <button class="greenLoginBtn greenBtn" type="submit" onclick="login()">
+          Log ind
         <i class="fa-solid fa-arrow-right greenArrow"></i>
       </button>
       <span class="loginCenterTxt txtLine"> Eller anvend </span>
       <div class="sociallogin">
-        <button class="otherLogin" href="#typografi_klik"><img src="img/google.png" alt="google logo"></button>
-        <button class="otherLogin" href="#typografi_klik"><img src="img/facebook.png" alt="facebook logo"></button>
+        <a href="#" class="otherLogin"><img src="img/google.png" alt="google logo"></a>
+        <a href="#" class="otherLogin2"><img src="img/facebook.png" alt="facebook logo"></a>
 
       </div>
     </form>
