--- a/medlemskort.html
+++ b/medlemskort.html
@@ -24,7 +24,7 @@
           </div>
           <div class="navContainer">
             <ul class="navbar">
-                <li><i class="fa fa-solid fa-house"></i><a href="index.html">Hjem</a></li>
+                <li><i class="fa fa-solid fa-house"></i><a href="landingpage.html">Hjem</a></li>
                 <li><i class="fa fa-solid fa-table-cells-large"></i><a href="overblik.html">Overblik</a></li>
                 <li><i class="fa fa-solid fa-gear"></i><a href="#">Indstillinger</a></li>
                 <li><i class="fa fa-regular fa-circle-question"></i><a href="faq.html">Hjælp</a></li>
@@ -64,7 +64,7 @@
             <p class="centerTxt">Hver 50kr. du bruger giver dig 25 points. </p>
             
             <button id="changePlan" class="greenBtn btn">
-                <p class="greenBtnTxt activeText">Skift plan</p>
+                    Skift plan
                 <i class="fa-solid fa-arrow-right greenArrow"></i>
             </button>
         </div>
