--- a/planer.html
+++ b/planer.html
@@ -25,7 +25,7 @@
           </div>
           <div class="navContainer">
             <ul class="navbar">
-                <li><i class="fa fa-solid fa-house"></i><a href="index.html">Hjem</a></li>
+                <li><i class="fa fa-solid fa-house"></i><a href="landingpage.html">Hjem</a></li>
                 <li><i class="fa fa-solid fa-table-cells-large"></i><a href="overblik.html">Overblik</a></li>
                 <li><i class="fa fa-solid fa-gear"></i><a href="#">Indstillinger</a></li>
                 <li><i class="fa fa-regular fa-circle-question"></i><a href="faq.html">Hjælp</a></li>
@@ -95,8 +95,8 @@
             </div>
             
 
-            <button class="greenBtn btn" id="plan">
-                <p class="greenBtnTxt activeText">Godkend plan</p>
+            <button class="greenBtn" id="plan">
+                Godkend plan
                 <i class="fa-solid fa-arrow-right greenArrow"></i>
             </button>
         </div>
