--- a/rewards.html
+++ b/rewards.html
@@ -24,7 +24,7 @@
           </div>
           <div class="navContainer">
             <ul class="navbar">
-                <li><i class="fa fa-solid fa-house"></i><a href="index.html">Hjem</a></li>
+                <li><i class="fa fa-solid fa-house"></i><a href="landingpage.html">Hjem</a></li>
                 <li><i class="fa fa-solid fa-table-cells-large"></i><a href="overblik.html">Overblik</a></li>
                 <li><i class="fa fa-solid fa-gear"></i><a href="#">Indstillinger</a></li>
                 <li><i class="fa fa-regular fa-circle-question"></i><a href="faq.html">Hjælp</a></li>
@@ -52,23 +52,28 @@
 <!-- Klar til brug -->
         <h1 class="underOverskrift">Klar til brug</h1>
         <button onclick="openModal()" class="rewardBox1 colorful-div color1">
-            <h3 class="rewardText activeText">Gratis Brillerens</h3>
+            <!-- <h3 class="rewardText activeText"></h3> -->
+              Gratis Brillerens
             <i class="fa-solid fa-circle-check"></i>
         </button>
         <button class="rewardBox1 colorful-div color2">
-            <h3 class="rewardText activeText">10% rabat på næste køb</h3>
+            <!-- <h3 class="rewardText activeText"></h3> -->
+              10% rabat på næste køb
             <i class="fa-solid fa-circle-check"></i>
         </button>
         <button class="rewardBox1 colorful-div color3">
-            <h3 class="rewardText activeText">En kop gratis kaffe</h3>
+            <!-- <h3 class="rewardText activeText"></h3> -->
+              En kop gratis kaffe
             <i class="fa-solid fa-circle-check"></i>
         </button>
         <button class="rewardBox1 colorful-div color1">
-            <h3 class="rewardText activeText">Køb 3 betal for 2</h3>
+            <!-- <h3 class="rewardText activeText"></h3> -->
+              Køb 3 betal for 2
             <i class="fa-solid fa-circle-check"></i>
         </button>
         <button class="rewardBox1 colorful-div color2">
-            <h3 class="rewardText activeText">Fri fragt af linser</h3>
+            <!-- <h3 class="rewardText activeText"></h3> -->
+              Fri fragt af linser
             <i class="fa-solid fa-circle-check"></i>
         </button>
 
@@ -76,7 +81,7 @@
         <h1 class="underOverskrift">Du er der snart</h1>
         <div class="rewardBox color1">
             <div class="rewardGrid">
-              <h3 class="boxText1 activeText">Gratis Pudseklud</h3>
+              <h3 class="boxText1">Gratis Pudseklud</h3>
             </div>
             <div class="rewardGrid2">
               <p class="procenter">50%</p>
@@ -85,7 +90,7 @@
           </div>
           <div class="rewardBox color2">
             <div class="rewardGrid">
-              <h3 class="boxText1 activeText">20% rabat på næste køb</h3>
+              <h3 class="boxText1">20% rabat på næste køb</h3>
             </div>
             <div class="rewardGrid2">
               <p class="procenter">50%</p>
@@ -94,7 +99,7 @@
           </div>
           <div class="rewardBox color3">
             <div class="rewardGrid">
-              <h3 class="boxText1 activeText">Gratis brillekæde</h3>
+              <h3 class="boxText1">Gratis brillekæde</h3>
             </div>
             <div class="rewardGrid2">
               <p class="procenter">50%</p>
@@ -106,7 +111,7 @@
         <h1 class="underOverskrift">Tjen points nu</h1>
         <div class="rewardBox color1">
             <div class="rewardGrid">
-                <h3 class="rewardText activeText">Henvis en ven</h3>
+                <h3 class="boxText1">Henvis en ven</h3>
                 <p class="rewardText">Tjen 500 points</p>
             </div>
             <div class="rewardGrid2">
@@ -115,7 +120,7 @@
         </div>
         <div class="rewardBox color2">
             <div class="rewardGrid">
-                <h3 class="rewardText activeText">Følg os på Facebook</h3>
+                <h3 class="boxText1">Følg os på Facebook</h3>
                 <p class="rewardText">Tjen 150 points</p>
             </div>
             <div class="rewardGrid2">
@@ -124,7 +129,7 @@
         </div>
         <div class="rewardBox color3">
             <div class="rewardGrid">
-                <h3 class="rewardText activeText">Følg os på Instagram</h3>
+                <h3 class="boxText1">Følg os på Instagram</h3>
                 <p class="rewardText">Tjen 150 points</p>
             </div>
             <div class="rewardGrid2">
@@ -133,7 +138,7 @@
         </div>
         <div class="rewardBox color1">
             <div class="rewardGrid">
-                <h3 class="rewardText activeText">Tilmeld dig nyhedsbrevet</h3>
+                <h3 class="boxText1">Tilmeld dig nyhedsbrevet</h3>
                 <p class="rewardText">Tjen 300 points</p>
             </div>
             <div class="rewardGrid2">
@@ -142,44 +147,42 @@
         </div>
 
 
-<div id="myModal" class="modal">
-  <div class="modal-content">
-      <div class="card" id="card">
-          <div class="card-face card-front">
-            <button class="close-btn" onclick="closeModal()">
-              <i class="fa-solid fa-arrow-left"></i>
-            </button>
-              <div class="modal-icons">
+        <div id="myModal" class="modal">
+          <div class="modal-content">
+            <div class="card" id="card">
+              <div class="card-face card-front">
+                <button class="close-btn" onclick="closeModal()">
+                  <i class="fa-solid fa-arrow-left"></i>
+                </button>
+                <div class="modal-icons">
                   <i class="fa-solid fa-spray-can-sparkles"></i>
                   <i class="fa-solid fa-glasses fa-rotate-by"></i>
+                </div>
+                <h2 class="modal-overskrift">Gratis brillerens</h2>
+                <p class="modalTxt">Udløber 01-07-2023</p>
+                <br>
+                <p class="modalTxt">En gratis spray brillerens, <br> som kan afhentes i Brillebaren</p>
+                <button class="greenBtn" id="startAnimationButton" onclick="flipCard()">
+                  Aktiver Belønning
+                </button>
               </div>
-              <h2 class="modal-overskrift">Gratis brillerens</h2>
-              <p class="modalTxt">Udløber 01-07-2023</p>
-              <br>
-              <p class="modalTxt">En gratis spray brillerens, <br> som kan afhentes i Brillebaren</p>
-              <button class="greenBtn2" id="startAnimationButton" onclick="flipCard()">
-                  <p class="greenBtnTxt">Aktiver Belønning</p>
-              </button>
-          </div>
-          <div class="card-face card-back">
-            <button class="close-btn" onclick="closeModal()">
-              <i class="fa-solid fa-xmark"></i>
-            </button>
-              <img class="qrCode" src="img/qr-code.png" alt="qr-code">
-              <h2 class="modal-overskrift">Gratis brillerens</h2>
-              <p class="modalTxt">Udløber 01-07-2023</p>
-              <br>
-              <p class="modalTxt">En gratis spray brillerens, <br> som kan afhentes i Brillebaren</p>
-                  
-              <div class="rewardActivatet">
-                <h2 class="activatetTxt">Aktiveret</h2>
-                <i class="fChekmark fa-solid fa-check"></i>
+              <div class="card-face card-back">
+                <button class="close-btn" onclick="closeModal()">
+                  <i class="fa-solid fa-arrow-left"></i>
+                </button>
+                <img class="qrCode" src="img/qr-code.png" alt="qr-code">
+                <h2 class="modal-overskrift">Gratis brillerens</h2>
+                <p class="modalTxt">Udløber 01-07-2023</p>
+                <br>
+                <p class="modalTxt">En gratis spray brillerens, <br> som kan afhentes i Brillebaren</p>
+                <div class="rewardActivatet">
+                  <h2 class="activatetTxt">Aktiveret</h2>
+                  <i class="fChekmark fa-solid fa-check"></i>
+                </div>
               </div>
-
+            </div>
           </div>
-      </div>
-  </div>
-</div>
+        </div>
 
         <footer></footer>
     </div>
