--- a/styleguide.html
+++ b/styleguide.html
@@ -191,7 +191,7 @@
 
     <p>Dette er maskotten til Brillebaren. Den bruges primært på login siden og index. Husk at tilføje CSS, da den eller bliver meget stor.</p>
 
-    <img class="maskot" src="img/Maskot til Brillebaren 1.png" alt="maskot">
+    <img class="maskot" src="img/maskot.png" alt="maskot">
     <h4>CSS</h4>
     <textarea id="example10" class="styleguide_textarea">
           .maskot {
