--- a/opret.html
+++ b/opret.html
@@ -29,16 +29,12 @@
             <label class="inputLabel">E-mail</label>
             <input type="text" class="form-control" name="username" placeholder="Skriv din Email" required="">
             <p>Her sender vi dine fortrukne nyheder og fakturaer.</p>
-            <br>
             <label class="inputLabel">Fornavn</label>
             <input type="text" class="form-control" name="firstname" placeholder="Skriv dit fornavn" required="">
-            <br>
             <label class="inputLabel">Efternavn</label>
             <input type="text" class="form-control" name="username" placeholder="Skriv dit efternavn" required="">
-            <br>
             <label class="inputLabel">Adgangskode</label>
             <input type="password" class="form-control" name="password" placeholder="Skriv en adgangskode" required="">
-            <br>
             <label class="inputLabel">Gentag adgangkode</label>
             <input type="password" class="form-control" name="password" placeholder="Gentag adgangskode" required="">
 
@@ -58,8 +54,8 @@
               </div>
               <span id="errorMessage" class="error"></span>
               
-            <br>
-            <p>Mest interesseret i (Friviligt):</p>
+            
+            <p class="interestTxt">Mest interesseret i (Friviligt):</p>
             <div class="interest">
                 <label class="interestbox">
                     <span class="checkTxt">Briller</span>
